# obmc-sample-app

./: CMakeLists.txt  README.md  xyz.openbmc_project.demoApp.service
.circleci/: config.yml
src/: action.cpp  action.hpp  hello-world-local.cpp  interfaces.cpp  interfaces.hpp  main.cpp
tests/: CMakeLists.txt  main.cpp  test-interfaces.cpp
